[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dtorch"]

[project]
name = "dtorch"
version = "0.0.4"
authors = [
  { name="Just1truc", email="hyppoduc@gmail.com" },
]
description = "A scientific package made a fellow student"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Just1truc/dtorch"
"Bug Tracker" = "https://github.com/Just1truc/dtorch/issues"